Added Open Graph tags

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@ limitations under the License.
 -->
 
 <!DOCTYPE html>
-<html>
+<html prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="utf-8">
     <title>ReceiptLine Designer</title>
+    <meta property="og:title" content="ReceiptLine Designer">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://receiptline.github.io/designer/image/01.png">
+    <meta property="og:url" content="https://receiptline.github.io/designer/">
+    <meta property="og:description" content="The ReceiptLine Designer allows you to easily edit and preview the output images of receipts, tickets, etc., using the ReceiptLine markdown language.">
+    <meta name="twitter:card" content="summary_large_image">
+    <link href="favicon.ico" rel="icon">
     <link href="css/receiptline-designer.css" rel="stylesheet">
     <script type="text/javascript" src="script/receiptline-designer.js"></script>
     <script type="text/javascript" src="script/receiptline.js"></script>
