--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ limitations under the License.
             </button>
             <button id="cut" class="tooltip" data-tooltip="paper cut">
                 <svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                    <text x="12" y="20" text-anchor="middle" fill="#000" font-family="monospace" font-size="24">&#x2702;</text>
+                    <path stroke="#000" fill="none" stroke-width="1" d="M12,12.5l-7.5,-3a2,2,0,1,1,.5,0M12,11.5l-7.5,3a2,2,0,1,0,.5,0"/>
+                    <path fill="#000" d="M12,12l10,-4q-1,-1,-2.5,-1l-10,4v2l10,4q1.5,0,2.5,-1z"/>
                 </svg>
             </button>
             <button id="ul" class="tooltip" data-tooltip="underline">
@@ -131,7 +132,7 @@ limitations under the License.
         </div>
     </header>
     <hr>
-    <main>
+    <main id="main">
         <textarea id="edit" rows="24" cols="80" placeholder="ReceiptLine Text" autofocus="autofocus"></textarea>
         <section>
             <div id="paper" class="receipt"></div>
@@ -479,6 +480,6 @@ limitations under the License.
             </div>
         </div>
     </div>
-    <footer>ReceiptLine Designer Version 1.4.0 © 2019 Open Foodservice System Consortium</footer>
+    <footer>ReceiptLine Designer Version 1.5.0 © 2019 Open Foodservice System Consortium</footer>
 </body>
 </html>
