--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ limitations under the License.
     <div id="loaddialog" class="dialog">
         <div id="loadcancel"></div>
         <div id="loadbox">
-            <input id="loadfile" type="file" accept="text/plain">
+            <input id="loadfile" type="file" accept=".receipt,text/plain">
             <br>
             <textarea id="loadview" rows="12" cols="40" readonly></textarea>
             <hr>
@@ -492,6 +492,6 @@ limitations under the License.
             </div>
         </div>
     </div>
-    <footer>ReceiptLine Designer Version 1.15.0 © 2019 Open Foodservice System Consortium</footer>
+    <footer>ReceiptLine Designer Version 1.16.0 © 2019 Open Foodservice System Consortium</footer>
 </body>
 </html>
